# plataforma-analise

./: .env  Cargo.toml  Dockerfile  README.md  fly.toml
backend/aggregation-core/: Cargo.toml
backend/aggregation-core/src/: aggregator.rs  candle.rs  candle_store.rs  lib.rs  proto.rs  ring_buffer.rs  sequencer.rs  tick_store.rs
backend/broadcast-hub/: Cargo.toml
backend/broadcast-hub/src/: coalescer.rs  lib.rs
backend/common/: Cargo.toml
backend/common/src/: config.rs  error.rs  lib.rs  proto.rs  types.rs
backend/contracts-rs/: Cargo.toml  build.rs
backend/contracts-rs/src/: lib.rs
backend/feed-handler/: Cargo.toml
backend/feed-handler/src/: handler.rs  lib.rs  normalizer.rs  provider.rs
backend/server/: Cargo.toml
backend/server/src/: convert.rs  hub.rs  main.rs  mock_provider.rs
proto/: market_stream.proto  tick.proto
