[package]
name = "broadcast-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
contracts-rs = { path = "../contracts-rs" }
aggregation-core = { path = "../aggregation-core" }
tokio.workspace = true
tracing.workspace = true
prost.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true