[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
contracts-rs = { path = "../contracts-rs" }
aggregation-core = { path = "../aggregation-core" }
feed-handler = { path = "../feed-handler" }

tokio = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }

axum = { version = "0.7", features = ["ws"] }
anyhow = "1"
rand = "0.8"
